--- a/package.json
+++ b/package.json
@@ -1,45 +1,34 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "proxy": "http://localhost:5000/",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "crypto-js": "4.0.0",
-    "ethers": "^5.7.1",
-    "qrcode": "1.4.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^4.0.3",
-    "speakeasy": "2.0.0",
-    "use-wallet": "^0.13.6",
-    "web-vitals": "^2.1.4",
-    "webpack": "^4.44.2"
-  },
+  "name": "arcadian",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node server",
+    "server": "node server"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GudingStar/NFT-frontend.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "author": "AshaiSuzuki",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/GudingStar/NFT-frontend/issues"
+  },
+  "homepage": "https://github.com/GudingStar/NFT-frontend#readme",
+  "dependencies": {
+    "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "config": "^3.3.8",
+    "express": "^4.18.1",
+    "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "speakeasy": "^2.0.0",
+    "validator": "^13.7.0"
   }
 }
